--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ footer{text-align:center;padding:30px;color:#777;background:#000;}
 
 <!-- HERO LANDING -->
 <section class="hero">
-<h1>Building The Future of Digital Marketing</h1>
+<h1>Buy Low and luxury products on fireproducts</h1>
 <p>FireProduct is a modern marketing-driven platform delivering affordable and luxury products through smart brand strategy.</p>
 <button class="btn">Explore FireProduct</button>
 </section>
