--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ and startup growth strategies.
 
 <div class="timeline-item">
 <h4>Web Developer & Digital Marketer</h4>
-<p>Developed multiple business and documentation websites with modern UI design.</p>
+<p>Developed multiple business and make website by using html css and js or next.js</p>
 </div>
 
 <div class="timeline-item">
