--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ footer{text-align:center;padding:30px;color:#777;background:#000;}
 <img src="https://media-ccu1-1.cdn.whatsapp.net/v/t61.24694-24/620277534_2343158599497352_7119357435448474058_n.jpg?ccb=11-4&oh=01_Q5Aa3wFeRupCzfTVDxAc2ySkq9HED5q0jZvXc9BNu1UIlxGltw&oe=6995340D&_nc_sid=5e03e0&_nc_cat=107" alt="Santanu">
 <h3>Santanu Konwar</h3>
 <p>Founder & CEO, FireProduct</p>
-<p style="margin-top:10px;color:#f97316;">Digital Entrepreneur</p>
+<p style="margin-top:10px;color:#f97316;">Agency marketer</p>
 </div>
 
 <div class="profile-details">
